--- a/tutorial_1.ipynb
+++ b/tutorial_1.ipynb
@@ -1,16 +1,189 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Numpy Arrays\n",
+    "Arrays are special multiple dimensional data structures that allow for efficient computation and manipulation. You can think of them as nested lists but can only one type of data. Numpy arrays are very similar to Matlab arrays and allow for some level of cross-capability between the two languages. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "slideshow": {
+     "slide_type": "slide"
+    }
    },
+   "source": [
+    "Making an array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 1 2 2]\n",
+      "['2' '1' '2' 'a']\n"
+     ]
+    }
+   ],
+   "source": [
+    "x1 = np.array([2,1,2,2])\n",
+    "print(x1)\n",
+    "\n",
+    "x2 = np.array([2,1,2,'a'])\n",
+    "print(x2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "This 1-dimensional array works similar to a list. We can subset an array using an index"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "2\n",
+      "[2 2]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# selects the first element \n",
+    "print(x[0])\n",
+    "\n",
+    "# selects the last element\n",
+    "print(x[-1])\n",
+    "\n",
+    "# selects a subset\n",
+    "print(x[2:4])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "3 dimensional arrays (closer to real world data structures) have an extra dimension. To make them, we can use a nested list with one list for each row or use the shape on a 1-dimensional array"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 4]\n",
+      " [2 1 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_3d = np.array([[2,3,4], [2,1,3]])\n",
+    "print(x_3d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3]\n",
+      " [4 2]\n",
+      " [1 3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x_3d = np.array([2,3,4,2,1,3])\n",
+    "x_3d.shape = (2,3) # 2 rows and 3 columns\n",
+    "print(x_3d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([ 2,  3,  4,  5, 65,  6])"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.array([2,3,4,5,65,6])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 2",
    "language": "python",
@@ -26,9 +199,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
